--- a/style.css
+++ b/style.css
@@ -31,7 +31,9 @@
   cursor: pointer;
 }
 .navMesi {
+  width: 220px;
   border-radius: 5px;
+  text-align: center;
   background: white;
 }
 .navPaesi {
